[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_run_anim_f1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_idle_anim_f3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_idle_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_run_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_run_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_idle_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_run_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_hit_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Mobs/Assets/Mage/wizzard_m_idle_anim_f0.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Mobs/Mage.gd" type="Script" id=43]
[ext_resource path="res://Scenes/Mobs/Sounds/mixkit-boxer-getting-hit-2055.wav" type="AudioStream" id=59]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.27208
height = 4.1132

[sub_resource type="CircleShape2D" id=3]
radius = 96.9653

[sub_resource type="CircleShape2D" id=4]
radius = 188.657

[sub_resource type="CircleShape2D" id=5]
radius = 493.21

[sub_resource type="CircleShape2D" id=6]
radius = 29.9105

[node name="Mage" type="KinematicBody2D" groups=[
"mobs",
]]
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 37
script = ExtResource( 43 )
SPEED = 400
MAX_HEALTH = 45
DODGE_SPEED = 250
ATTACK_COOLDOWN = 1

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0.618631, 6.57674 )
shape = SubResource( 2 )

[node name="DodgeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DodgeArea"]
shape = SubResource( 3 )

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource( 4 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 5 )

[node name="UnSplitArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnSplitArea"]
shape = SubResource( 6 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( 12.1055, 6.79749 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 59 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="DodgeArea" to="." method="_on_DodgeArea_body_entered"]
[connection signal="body_exited" from="DodgeArea" to="." method="_on_DodgeArea_body_exited"]
[connection signal="body_entered" from="RangeArea" to="." method="_on_RangeArea_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_RangeArea_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="UnSplitArea" to="." method="_on_UnSplitArea_body_entered"]
[connection signal="body_exited" from="UnSplitArea" to="." method="_on_UnSplitArea_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
